Updated nginx for staticfiles

--- a/ansible/roles/services_config/templates/nginx_django.conf.j2
+++ b/ansible/roles/services_config/templates/nginx_django.conf.j2
@@ -15,10 +15,6 @@ server {
     }
 
     location /static/ {
-        alias /opt/app/src/static/;
-    }
-
-    location /media/ {
-        alias /opt/app/src/media/;
+        alias /opt/app/src/staticfiles/;
     }
 }
